--- a/app/assets/sass/typography.scss
+++ b/app/assets/sass/typography.scss
@@ -1,93 +1,102 @@
 div.bigcopy {
+	// margin: 0 -5% 40px;
+	font-size: 35px;
+	line-height: 47px;
 
-
-    // margin: 0 -5% 40px;
-    font-size: 35px;
-    line-height: 47px;
 	@media #{$small-and-down} {
 		font-size: 22px;
 		line-height: 1.3;
 	}
+
 	p {
-        font-size: 35px;
-        line-height: 47px;
+		font-size: 35px;
+		line-height: 47px;
+
 		@media #{$small-and-down} {
 			font-size: 22px;
 			line-height: 1.3;
 			font-weight: 400;
 		}
 	}
+
 	ol,
 	ul {
-
-
-        font-size: 35px;
-        line-height: 47px;
-		@media #{$bp-small} {
-
-
-		}
+		font-size: 35px;
+		line-height: 47px;
 	}
 }
 
 // MAIN ======
 .main-content,
 .blog-entry {
-	h1, h2, h3, h4, h5, h6 {
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
 		color: #444;
 		margin-bottom: 10px;
 		margin-top: 50px;
 	}
+
 	h1 {
 		font-family: $main-headings;
-	
+
 
 		font-weight: 600;
 		color: #444;
 	}
+
 	h2 {
 		font-family: $main-headings;
-	
+
 
 		font-weight: 600;
 		color: #444;
 	}
+
 	h3 {
 		text-transform: uppercase;
 		margin-bottom: 8px;
-        font-family: $main-headings;
-        font-size: 40px;
-        line-height: 1.5;
+		font-family: $main-headings;
+		font-size: 40px;
+		line-height: 1.5;
+
 		@media #{$mobile-landscape} {
-		    margin-top: 20px;
+			margin-top: 20px;
 		}
 	}
+
 	h5 {
 		margin-top: 20px;
 		margin-bottom: 40px;
 	}
+
 	h6 {
 		font-family: $lite-headings;
- 
- 
+
+
 		margin-top: 20px;
 	}
+
 	p {
 		margin-bottom: 20px;
+
 		@media #{$small-and-down} {
 			font-size: 18px;
 			line-height: 1.3;
 		}
+
 		@media #{$medium-and-up} {
 			font-size: 23px;
 
 
 			line-height: 1.5;
 		}
-		@media #{$mobile-landscape} {
 
-
-		}
+		@media #{$mobile-landscape} {}
 	}
 }
 
@@ -106,10 +115,12 @@ span.bolded-text {
 		font-style: italic;
 		font-weight: 400;
 		font-family: $p-font;
+
 		@media #{$small-and-down} {
 			font-size: 24px;
 			line-height: 1.5;
 		}
+
 		p {
 			font-style: italic;
 
@@ -118,31 +129,35 @@ span.bolded-text {
 			font-family: $p-font;
 			text-transform: none;
 		}
-		&:before {
-		    content: '“';
-		    position: absolute;
-		    margin-left: -.4em;
 
-		    font-family: $main-headings;
-		    color: rgba(0,0,0,0.2);
+		&:before {
+			content: '“';
+			position: absolute;
+			margin-left: -.4em;
+
+			font-family: $main-headings;
+			color: rgba(0, 0, 0, 0.2);
 		}
 
 		&:after {
-		    content: '”';
-		    font-family: $main-headings;
-		    color: rgba(0,0,0,0.2);
+			content: '”';
+			font-family: $main-headings;
+			color: rgba(0, 0, 0, 0.2);
 		}
 	}
+
 	h4 {
 		margin: 0;
 		margin-top: 25px;
 		text-align: right;
 		text-transform: uppercase;
 	}
+
 	h5 {
 		text-align: right;
 		margin: 0;
 	}
+
 	p.testimonial__caption {
 		font-family: $lite-headings;
 		padding-top: 5px;
@@ -162,19 +177,9 @@ span.bolded-text {
 .services-cta {
 	p {
 		font-family: $lite-headings;
-
-
-        font-size: 37px;
-        line-height: 37px;
-        margin: 0;
-		@media #{$bp-small} {
-
-
-		}
-		@media #{$mobile-landscape} {
-
-
-		}
+		font-size: 37px;
+		line-height: 37px;
+		margin: 0;
 	}
 }
 
@@ -187,8 +192,6 @@ span.bolded-text {
 	font-weight: bold;
 	// padding: 15px 30px;
 	// height: 60px;
-
-
 	font-size: 18px;
 	line-height: 18px;
 	// border: 1px solid $black;
@@ -202,22 +205,8 @@ span.bolded-text {
 .projects__panel {
 	h2 {
 		color: $white;
-
-
 		position: relative;
 		transition: all 0.5s;
-		@media #{$bp-med} {
-
-
-		}
-		@media #{$bp-large} {
-
-
-		}
-		@media #{$bp-xlarge} {
-
-
-		}
 	}
 }
 
@@ -228,23 +217,22 @@ span.bolded-text {
 		left: 5%;
 		right: 5%;
 		text-align: center;
-        margin: 0 auto;
-        color: $white;
-        text-transform: uppercase;
-        font-weight: normal;
+		margin: 0 auto;
+		color: $white;
+		text-transform: uppercase;
+		font-weight: normal;
+
 		@media #{$bp-small} {
-		    top: 40%;
+			top: 40%;
 		}
+
 		@media #{$bp-med} {
- 
- 
 			top: 35%;
 		}
+
 		@media #{$bp-large} {
- 
- 
-            font-size: 101px;
-            line-height: 101px;
+			font-size: 101px;
+			line-height: 101px;
 		}
 	}
 }
@@ -265,12 +253,14 @@ span.bolded-text {
 	.testimonial__quotation {
 		@media #{$bp-small} {
 			margin: 0 0 0 15px;
- 
- 
+
+
 		}
 	}
+
 	.testimonial__creds {
-		color: rgba(255,255,255,0.4);
+		color: rgba(255, 255, 255, 0.4);
+
 		@media #{$bp-small} {
 			h4 {
 				margin-top: 20px;
@@ -281,44 +271,24 @@ span.bolded-text {
 
 // BLOG
 
-.blog-entry > p:first-child,
-.blog-entry > blockquote:first-child,
-.blog-entry > blockquote:first-child > p:first-child {
+.blog-entry>p:first-child,
+.blog-entry>blockquote:first-child,
+.blog-entry>blockquote:first-child>p:first-child {
 	&::first-letter {
-		float: left; 
-		font-size: 165px; 
+		float: left;
+		font-size: 165px;
 		line-height: 120px;
 		padding: 12px 10px 0px 0px;
+
 		// font-family: $main-headings;
 		@media #{$small-and-down} {
-			font-size: 80px; 
+			font-size: 80px;
 			line-height: 65px;
 			padding: 25px 10px 0 0;
 		}
+
 		@media #{$mobile-landscape} {
 			padding: 0 10px 0 5px;
 		}
 	}
 }
-
-// .blog-entry > blockquote:first-child,
-// .blog-entry > blockquote:first-child > p:first-child {
-// 	&::first-letter {
-// 	    float: left;
-//         font-size: 11.21766rem; 
-//         line-height: 0.8;
-//         padding: 22px 25px 0px 0px;
-//         @media #{$bp-small} {
-
-
-//             padding: 0 10px 0 5px;
-//             float: left;
-//         }
-//         @media #{$mobile-landscape} {
-//             font-size: 11.21766rem; 
-
-//             padding: 0 10px 0 5px;
-//             float: left;
-//         }
-// 	}
-// }
